Add modified file 2.0

--- a/new.html
+++ b/new.html
@@ -8,7 +8,7 @@
     
 </head>
 <body>
-    <h2>The Infinitry Stones</h2>
+    <h2>The Infinity Stones</h2>
     <table>
         <tr>
             <th>Name</th>
